--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "fs-api",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
+    "shell": "node shell.js",
+    "start": "node index.js",
     "test": "ava"
   },
   "author": "Aaron Schachter",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mock-require": "^3.0.3"
+    "express": "^4.18.2"
   },
   "devDependencies": {
+    "mock-require": "^3.0.3",
     "@faker-js/faker": "^7.6.0",
     "ava": "^5.1.0"
   }
