--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "author": "Aaron Schachter",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "mock-require": "^3.0.3",
     "@faker-js/faker": "^7.6.0",
-    "ava": "^5.1.0"
+    "ava": "^5.1.0",
+    "mock-require": "^3.0.3"
   }
 }
