--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Aaron Schachter",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "lodash": "^4.17.21"
   },
